In RAM, you can see a coherent text!
	modified:   ../.gitmodules
	new file:   mgbdis
	modified:   ../src/app.py
	modified:   ../src/main.py
	modified:   ../src/memory.py

	new file:   tests-roms/test.gb

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tests/gb-test-roms"]
 	path = tests/gb-test-roms
 	url = https://github.com/retrio/gb-test-roms.git
+[submodule "tests/mgbdis"]
+	path = tests/mgbdis
+	url = https://github.com/mattcurrie/mgbdis.git
